Issue #547: review: * added MQTT 5 page to documentation ditto_sidebar.yml * updated architecture picture to include MQTT 5 * made changes to HiveMqtt5ClientActor which were in the meantime improved in HiveMqtt3ClientActor as well (e.g. lazy initialization) * allowed clientCount > 1 and source consumerCount > 1 for Mqtt5Validator as MQTT 5 has the concept of "shared subscriptions" which can be used for scaling via round-robin consumption * applied code formatter
Signed-off-by: Thomas Jaeckle <thomas.jaeckle@bosch.io>